# python-data-analysis-utils

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
src/: config.py
src/utils/: general_utils.py
tests/: test_matplotlib_utils.py
utils/: matplotlib_utils.py  plotly_utils.py
