[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-data-analysis-utils"
version = "0.1"
description = "A collection of versatile utility functions for Python."
readme = "README.md"
authors = [
    {name = "Hubert26", email = "hubert.szewczyk95@gmail.com"}
]
dependencies = [
    "numpy>=1.19",
    "pandas>=1.2"
]

[project.optional-dependencies]
plotly = ["plotly>=5.0"]
matplotlib = ["matplotlib>=3.3"]
dataframe = ["pandas>=1.2", "openpyxl>=3.0"]
math_signals = ["scipy>=1.5"]
ml = ["scikit-learn>=0.24"]

[tool.setuptools]
packages = ["utils"]
package-dir = {"" = "src"}
